--- a/Day4-5/APIGW/package.json
+++ b/Day4-5/APIGW/package.json
@@ -4,16 +4,27 @@
   "description": "",
   "main": "handler.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "aws-jwt-verify": "^3.2.0",
-    "aws-sdk": "^2.1262.0"
+    "aws-sdk": "^2.1262.0",
+    "promise": "^8.3.0",
+    "superagent": "^8.0.4",
+    "superagent-promise": "^1.1.0"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "/__tests__/steps"
+    ]
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
+    "jest": "^29.3.1",
+    "lodash": "^4.17.21",
     "serverless-iam-roles-per-function": "^3.2.0"
   }
 }
